[package]
name = "nwahttp"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
warp = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
futures-util = "0.3.4"
prometheus = "0.7.0"
hyper = "0.13.2"